apps/shiplog/tests/render_json/snapshots/render_json__snapshot__coverage_manifest_multiple_sources.snap
---
source: apps/shiplog/tests/render_json/snapshot.rs
expression: text
---
{
  "run_id": "snapshot_run_2025",
  "generated_at": "2024-01-01T00:00:00Z",
  "user": "testuser",
  "window": {
    "since": "2025-01-01",
    "until": "2025-04-01"
  },
  "mode": "merged",
  "sources": [
    "github",
    "manual"
  ],
  "slices": [],
  "warnings": [],
  "completeness": "Complete"
}
