apps/shiplog/tests/render_json/snapshots/render_json__snapshot__coverage_manifest_partial.snap
---
source: apps/shiplog/tests/render_json/snapshot.rs
expression: text
---
{
  "run_id": "snapshot_run_2025",
  "generated_at": "2024-01-01T00:00:00Z",
  "user": "testuser",
  "window": {
    "since": "2025-01-01",
    "until": "2025-04-01"
  },
  "mode": "merged",
  "sources": [
    "github"
  ],
  "slices": [
    {
      "window": {
        "since": "2025-01-01",
        "until": "2025-02-01"
      },
      "query": "author:testuser is:merged",
      "total_count": 500,
      "fetched": 200,
      "incomplete_results": true,
      "notes": [
        "API rate limit reached"
      ]
    }
  ],
  "warnings": [
    "Incomplete data for January 2025"
  ],
  "completeness": "Partial"
}
